[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garland"
version = "0.1.0"
description = "Garlic-Routed Local Area Network Domain – Privacy-Preserving Epidemiological Security Testbed"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mesa>=2.1",
    "networkx>=3.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
garland = "garland.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/garland"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=garland --cov-report=term-missing:skip-covered"
